# DewController

./: .gitignore  README.md  README.md.backup
ClientSoftware/DewController-Qt/: Makefile  Makefile.Debug  Makefile.Release  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ClientSoftware/DewController-Qt/.qtc_clangd/: compile_commands.json
ClientSoftware/DewController-Qt/DewController/: DewController.pro  mainwindow.cpp  mainwindow.ui
DewControllerTCPIP_Serial-STM32/: platformio.ini
DewControllerTCPIP_Serial-STM32/src/: dewHeaterController.h  main.cpp
DewControllerTest-TCPIP-STM32/: platformio.ini
DewControllerTest-TCPIP-STM32/src/: commands.h  dewHeaterController.h  main.cpp
Documents/: Necessary power.odt  URLs.txt
Drivers/INDI/indi-dewheaterandfan/: CMakeLists.txt  StringParse.cpp  StringParse.h  dewheaterandfan.cpp  dewheaterandfan.h  indi_dewheaterandfan.cpp  parseTest.cpp
Drivers/INDI/indi-dewheaterandfan-simplified/: dewheaterandfan.h
Drivers/INDI/indi-dewheaterandfan/BuildCommands/: BuildCommands.txt
Firmware/DewControllerTCPIP_Serial-STM32/src/: SerialServices.cpp  SerialServices.h  TCPServices.cpp  TCPServices.h  dewHeaterController.h  main.cpp
INDI/indi-dewheaterandfan/: CMakeLists.txt  indi_dewheaterandfan.xml.cmake
INDI/indi-dewheaterandfan-Copy/: dewheaterandfan.cpp  dewheaterandfan.h
INDI/indi-dewheaterandfan-simplified/: dewheaterandfan.cpp
MechanicalDesigns/Case/: CE3_Case.gcode  CE3_CaseHolder-Body.gcode  CE3_LateralWall.gcode  CE3_Lid.gcode  Case-Old-00.FCStd  Case-Old-01.FCStd  Case.FCStd  Case.FCStd1  Case.stl  CaseHolder-Body.stl  CaseHolder.20240722-150828.FCBak  CaseHolder.FCStd  CaseHolder.FCStd1  LateralWall.FCStd  LateralWall.FCStd1  LateralWall.stl  Lid.FCStd  Lid.FCStd1  Lid.stl  PCB.FCStd  PCB.FCStd1
Schematic&PCB/: DesignFootprints.txt
Schematic&PCB/KiCad/DewController-V1.0/: DewController-V1.0.kicad_pcb  DewController-V1.0.kicad_prl  DewController-V1.0.kicad_pro  DewController-V1.0.kicad_sch  DewController-V1.0.xml  DewController-V1.ses
Schematic&PCB/KiCad/DewController-V1.1/: DewController-V1.1.dsn  DewController-V1.1.kicad_pcb  DewController-V1.1.kicad_prl  DewController-V1.1.kicad_pro  DewController-V1.1.kicad_sch  fp-info-cache
Software/: dewController.desktop
Software/DewController-Qt/: DewController  DewController.pro.user.3b51255  DewController.pro.user.ae1f7e3  DewController.pro.user.d91764e  Makefile  Makefile.Debug  Makefile.Release  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
Software/DewController-Qt/.qtc_clangd/: compile_commands.json
tools/: test.py
(+67 files in other folders)
